--- a/tools/Templates/HeuristicLab.VS2010Wizards/HeuristicLab.VS2010Wizards.csproj
+++ b/tools/Templates/HeuristicLab.VS2010Wizards/HeuristicLab.VS2010Wizards.csproj
@@ -45,10 +45,24 @@
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TemplateWizardInterface, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlgorithmWizard.cs" />
+    <Compile Include="AlgorithmWizardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlgorithmWizardForm.Designer.cs">
+      <DependentUpon>AlgorithmWizardForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewWizard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewWizardForm.cs">
@@ -62,12 +76,22 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AlgorithmWizardForm.resx">
+      <DependentUpon>AlgorithmWizardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewWizardForm.resx">
       <DependentUpon>ViewWizardForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="VS2010Templates.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="HeuristicLabIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
