Added the MultiVRPCrossover and MultiVRPManipulator operators (#1039)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4183 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.VehicleRouting/3.3/HeuristicLab.Problems.VehicleRouting-3.3.csproj
+++ b/sources/HeuristicLab.Problems.VehicleRouting/3.3/HeuristicLab.Problems.VehicleRouting-3.3.csproj
@@ -106,7 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analyzers\BestVRPSolutionAnalyzer.cs" />
-    <Compile Include="Encodings\General\RandomCreator.cs" />
+    <Compile Include="Encodings\General\Crossovers\MultiVRPManipulator.cs" />
+    <Compile Include="Encodings\General\Crossovers\MultiVRPCrossover.cs" />
+    <Compile Include="Encodings\General\Creators\RandomCreator.cs" />
     <Compile Include="Encodings\Potvin\Crossovers\SequenceBasedCrossover.cs" />
     <Compile Include="Encodings\Potvin\Crossovers\PotvinCrossover.cs" />
     <Compile Include="Encodings\Potvin\Manipulators\TwoLevelExchangeManipulator.cs" />
@@ -115,8 +117,8 @@
     <Compile Include="Interfaces\IVRPMoveMaker.cs" />
     <Compile Include="VRPUtilities.cs" />
     <Compile Include="VRPOperator.cs" />
-    <Compile Include="Encodings\General\PushForwardInsertionCreator.cs" />
-    <Compile Include="Encodings\General\DefaultRepresentationCreator.cs" />
+    <Compile Include="Encodings\General\Creators\PushForwardInsertionCreator.cs" />
+    <Compile Include="Encodings\General\Creators\DefaultRepresentationCreator.cs" />
     <Compile Include="Encodings\Alba\Crossovers\AlbaCrossover.cs" />
     <Compile Include="Encodings\Alba\Interfaces\IAlbaTranslocationMoveOperator.cs" />
     <Compile Include="Encodings\Alba\Manipulators\AlbaManipulator.cs" />
