#567  * Started adding problem wizard
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4188 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/tools/Templates/HeuristicLab.VS2010Wizards/HeuristicLab.VS2010Wizards.csproj
+++ b/tools/Templates/HeuristicLab.VS2010Wizards/HeuristicLab.VS2010Wizards.csproj
@@ -90,6 +90,13 @@
     <Compile Include="AlgorithmWizardForm.Designer.cs">
       <DependentUpon>AlgorithmWizardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProblemWizardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProblemWizardForm.Designer.cs">
+      <DependentUpon>ProblemWizardForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProblemWizard.cs" />
     <Compile Include="ParametersControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -116,6 +123,9 @@
   <ItemGroup>
     <EmbeddedResource Include="AlgorithmWizardForm.resx">
       <DependentUpon>AlgorithmWizardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProblemWizardForm.resx">
+      <DependentUpon>ProblemWizardForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ParametersControl.resx">
       <DependentUpon>ParametersControl.cs</DependentUpon>
