--- a/sources/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding/3.3/Tests/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.3.Tests.csproj
+++ b/sources/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding/3.3/Tests/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.3.Tests.csproj
@@ -100,6 +100,8 @@
     <Compile Include="ArgumentDeleterTest.cs" />
     <Compile Include="ArgumentDuplicaterTest.cs" />
     <Compile Include="AllArchitectureAlteringOperatorsTest.cs" />
+    <Compile Include="ChangeNodeTypeManipulationTest.cs" />
+    <Compile Include="ReplaceBranchManipulationTest.cs" />
     <Compile Include="SubroutineDeleterTest.cs" />
     <Compile Include="SubroutineDuplicaterTest.cs" />
     <Compile Include="Grammars.cs" />
