Added a memory efficient PRNG (`FastRandom`) and a specific operator to create new `FastRandom` PRNGs. #1114
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4243 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Random/3.3/HeuristicLab.Random-3.3.csproj
+++ b/sources/HeuristicLab.Random/3.3/HeuristicLab.Random-3.3.csproj
@@ -107,6 +107,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabRandomPlugin.cs.frame" />
+    <Compile Include="FastRandomCreator.cs" />
+    <Compile Include="FastRandom.cs" />
     <Compile Include="HeuristicLabRandomPlugin.cs" />
     <Compile Include="MersenneTwister.cs">
       <SubType>Code</SubType>
