Moved HeuristicLab.Services projects into a separate solution (#1160)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4256 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.Deployment/3.3/App.config
+++ b/sources/HeuristicLab.Services.Deployment/3.3/App.config
@@ -42,7 +42,7 @@
   </system.diagnostics>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-    <add connectionString="Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI" name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString" />
+    <add connectionString="Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI" name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString" />
     <add name="MyLocalSQLServer" connectionString="Initial Catalog=aspnetdb;data source=localhost;Integrated Security=SSPI;" />
   </connectionStrings>
   <system.webServer>
@@ -118,7 +118,7 @@
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
-            <serviceCertificate findValue="servdev.heuristiclab.com" storeLocation="LocalMachine"
+            <serviceCertificate findValue="services.heuristiclab.com" storeLocation="LocalMachine"
              storeName="My" x509FindType="FindBySubjectName" />
             <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
              membershipProviderName="MySqlMembershipProvider" />
@@ -130,7 +130,7 @@
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
-            <serviceCertificate findValue="servdev.heuristiclab.com" storeLocation="LocalMachine"
+            <serviceCertificate findValue="services.heuristiclab.com" storeLocation="LocalMachine"
              storeName="My" x509FindType="FindBySubjectName" />
             <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
              membershipProviderName="MySqlMembershipProvider" />
