--- a/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/Properties/Settings.settings
+++ b/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="HeuristicLab_PluginStoreConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI&lt;/ConnectionString&gt;
   &lt;ProviderName /&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI</Value>
+      <Value Profile="(Default)">Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI</Value>
     </Setting>
   </Settings>
 </SettingsFile>
