--- a/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/app.config
+++ b/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString"
-            connectionString="Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI"
+            connectionString="Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI"
             providerName="" />
     </connectionStrings>
 </configuration>
