Added more images from the VS2008 image library (#841)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4266 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
+++ b/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
@@ -429,6 +429,7 @@
     <None Include="Resources\HeuristicLab\HeuristicLabBanner.png" />
     <None Include="Resources\HeuristicLab\HeuristicLabLogo.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_ActualSize.png" />
+    <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_Disconnect.png" />
     <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Performance.ico" />
   </ItemGroup>
   <ItemGroup>
