Reviewed and adapted configuration of deployment service (#1165)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4273 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.Deployment/3.3/App.config
+++ b/sources/HeuristicLab.Services.Deployment/3.3/App.config
@@ -28,12 +28,12 @@
       </source>
     </sources>
     <sharedListeners>
-      <add initializeData="C:\inetpub\wwwroot\Deployment-3.3\web_messages.svclog"
+      <add initializeData="C:\inetpub\wwwroot\services.heuristiclab.com\Deployment-3.3\web_messages.svclog"
         type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
         name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
         <filter type="" />
       </add>
-      <add initializeData="C:\inetpub\wwwroot\Deployment-3.3\web_tracelog.svclog"
+      <add initializeData="C:\inetpub\wwwroot\services.heuristiclab.com\Deployment-3.3\web_tracelog.svclog"
         type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
         name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
         <filter type="" />
@@ -43,7 +43,7 @@
   <connectionStrings>
     <remove name="LocalSqlServer" />
     <add connectionString="Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI" name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString" />
-    <add name="MyLocalSQLServer" connectionString="Initial Catalog=aspnetdb;data source=localhost;Integrated Security=SSPI;" />
+    <add name="HeuristicLab.Authentication" connectionString="Initial Catalog=HeuristicLab.Authentication;data source=localhost;Integrated Security=SSPI;" />
   </connectionStrings>
   <system.webServer>
     <security>
@@ -55,17 +55,17 @@
   <system.web>
     <compilation debug="false" />
     <httpRuntime maxRequestLength="2097151" />
-    <membership defaultProvider="MySqlMembershipProvider">
+    <membership defaultProvider="AspNetSqlMembershipProvider">
       <providers>
         <clear />
-        <add name="MySqlMemberShipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="MyLocalSqlServer" enablePasswordReset="false" enablePasswordRetrieval="false" passwordFormat="Hashed" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"  minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" />
+        <add name="AspNetSqlMemberShipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" enablePasswordReset="false" enablePasswordRetrieval="false" passwordFormat="Hashed" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"  minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" />
       </providers>
     </membership>
     <authentication mode="Windows" />
-    <roleManager enabled="true" defaultProvider="MySqlRoleProvider">
+    <roleManager enabled="true" defaultProvider="AspNetSqlRoleProvider">
       <providers>
         <clear />
-        <add name="MySqlRoleProvider" connectionStringName="MyLocalSQLServer" applicationName="HeuristicLab.Deployment" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add name="AspNetSqlRoleProvider" connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </providers>
     </roleManager>
   </system.web>
@@ -121,10 +121,10 @@
             <serviceCertificate findValue="services.heuristiclab.com" storeLocation="LocalMachine"
              storeName="My" x509FindType="FindBySubjectName" />
             <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
-             membershipProviderName="MySqlMembershipProvider" />
+             membershipProviderName="AspNetSqlMembershipProvider" />
           </serviceCredentials>
           <serviceAuthorization principalPermissionMode="UseAspNetRoles"
-           roleProviderName="MySqlRoleProvider" />
+           roleProviderName="AspNetSqlRoleProvider" />
         </behavior>
         <behavior name="HeuristicLab.Services.Deployment.AdminBehavior">
           <serviceMetadata httpGetEnabled="true" />
@@ -133,10 +133,10 @@
             <serviceCertificate findValue="services.heuristiclab.com" storeLocation="LocalMachine"
              storeName="My" x509FindType="FindBySubjectName" />
             <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
-             membershipProviderName="MySqlMembershipProvider" />
+             membershipProviderName="AspNetSqlMembershipProvider" />
           </serviceCredentials>
           <serviceAuthorization principalPermissionMode="UseAspNetRoles"
-           roleProviderName="MySqlRoleProvider" />
+           roleProviderName="AspNetSqlRoleProvider" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
